--- a/Submission 2/Response_letter.tex
+++ b/Submission 2/Response_letter.tex
@@ -9,15 +9,13 @@
 
 Dear editors of the Journal of School Psychology,
 
-We hereby submit our revision of manuscript XXX.
+We hereby submit our revision of manuscript 23-KHVSI123023-535. We are thankful for the efforts of the editor and reviewers, and for the opportunity to revise. 
 
-[TODO: Thank editors and reviewers]
-
-Below, you will find our point-by-point response to the reviewer's comments, including changes made to the manuscript. Reviewer's comments are printed in black, our response printed in blue, verbatim parts from the manuscript are italicized. 
+Below, you will find our point-by-point response to the reviewer's comments, including changes made to the manuscript. Reviewer's comments are printed in black, our response printed in blue, verbatim parts from the manuscript are italicized.
 
 Sincerely,
 
-Dr. Marjolein Fokkema, also on behalf of Dr. Mirka Henninger & Prof. Carolin Strobl
+Dr. Marjolein Fokkema, also on behalf of Dr. Mirka Henninger and Prof. Carolin Strobl
 
 
 \textbf{Reviewer 1}
@@ -53,9 +51,8 @@ Minor issues:
 
 - in Figure 6 and 7; there is a node 4 but no node 3!?
 
-\auth{There is a node 4 in these Figures. Nodes 1, 2 and 4 are inner nodes, their numbers are indicated in a square box at the top of the node. Nodes 3, 5 and 6 are terminal nodes, their numbers are written above the node, without a box around it.}
+\auth{There is a node 3 in these Figures, but because it is a terminal node, the formatting of the node number is slightly different. Nodes 1, 2 and 4 are inner nodes, their numbers are indicated in a square box at the top of the node. Nodes 3, 5 and 6 are terminal nodes, their numbers are written above the node, without a box around it.}
 
-\MF{I can understand where the confusion comes from, but assume that readers will be able to spot node 4, even after some initial confusion. Or should we add a note to the Figures?}
 
 
 \textbf{Reviewer 2}
@@ -66,9 +63,9 @@ In this article, the authors present a tutorial-style introduction of model-base
 
 1. The first of these issues concerns the introduction into MOB. When writing a tutorial, authors need to specify a target audience. In this article, this audience is not easily identified. On the one hand, the text of this article is completely non-technical, in the sense that it contains no equations or formal model specifications. On the other hand, however, this text contains a large number of technical terms that readers in need of a tutorial may not be familiar with. Therefore, I recommend considering to also include a formal presentation of the models that are discussed in the intro and the examples. Those readers who are familiar with the technical terms may appreciate a formal presentation of these models.
 
-\auth{TODO}
+\auth{This is an important issue, indeed. Our aim is to write a non-technical tutorial. We appreciate the reviewer's suggestion, but have chosen not to include more formal presentations of the models. Interested readers can find those in the methodological papers referred to. Instead, in line with the reviewer's comments, we have better clarified technical terms throughout the manuscript.}
 
-\MF{Not completely sure how to deal with this. Adding ALL model representations (parameter stability tests, GLMM, Rasch models) to the paper makes it unsuitable for the readership, I think. We could add it as an Appendix, of course. But I think will not be very relevant for the readership.}
+
 
 2. The second of these issues concerns the results of the two application examples. In neither example, the resulting subgroups are sufficiently described or explained. This is an omission that lowers the appeal of the tutorial. Please complete the description of the results.
 
