--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -31,7 +31,7 @@
 \authorsnames{ }
 \authorsaffiliations{ }
 
-\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups of persons showing different effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity in, for example, intervention studies. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: the generalized linear mixed model (GLMM) and item response theory (IRT). In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to longitudinal data from a study on the effects of Head Start, to identify subgroups of families where children show comparatively larger or smaller gains in performance. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, i.e.~differential item functioning (DIF). DIF should be investigated before using test results for group comparisons. We show how a recently developed stopping criterion \citep{HenDebStr:2023:EPM} can be used to guide subgroup detection based on DIF effect sizes.\\}
+\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups of persons showing different effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity in, for example, intervention studies. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: the generalized linear mixed model (GLMM) and item response theory (IRT). In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to longitudinal data from a study on the effects of the Head Start pre-school program, to identify subgroups of families where children show comparatively larger or smaller gains in performance. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, i.e.~differential item functioning (DIF). DIF should be investigated before using test results for group comparisons. We show how a recently developed stopping criterion \citep{HenDebStr:2023:EPM} can be used to guide subgroup detection based on DIF effect sizes.\\}
 
 
 \begin{document}
@@ -76,11 +76,13 @@ options(prompt=" ", continue = " ")
 \section{Introduction}
 \label{sec:Introduction}
 
-Model-based recursive partitioning \citep[MOB;][]{ZeilyHoth08} is a semi-parametric approach for detecting differences in the parameters of a statistical model between groups of persons. It generalizes the principle of recursive partitioning, that is also used in classification and regression trees \citep[CART; ][]{Breetal:1984}. In CART, the aim is to detect groups of persons, defined by (combinations of) covariate values, that differ in their mean on a response variable. Detecting such subgroups may be of interest in many studies in school and developmental psychology. For example, recursive partitioning methods have been used to risk factors for adolescent crime \citep{FrityHaup19} and corporal punishment \citep{StemyHein19}, and to identify predictors of math ability \citep{DingyZhao19}.
+Model-based recursive partitioning \citep[MOB;][]{ZeilyHoth08} % simplified wording
+allows for detecting subgroups of persons that differ in the parameters of a statistical model. To find the subgroups, MOB uses \textit{recursive partitioning}, a technique that became widely known through classification and regression trees \citep[CART; ][]{Breetal:1984}. In CART, the aim is to detect groups of persons, defined by specific (combinations of) covariate values, that differ in their mean on a response variable. Detecting such subgroups may be of interest in many studies in school and developmental psychology. For example, recursive partitioning methods have been used to identify adolescents at higher risk of committing crime \citep{FrityHaup19} or experiencing corporal punishment \citep{StemyHein19}, and to identify predictors of math ability \citep{DingyZhao19}.
 
-MOB also identifies groups of persons defined by (combinations of) covariate values, but the groups can differ in a wider range of parameters of a statistical model, instead of only the mean. For example, MOB can be used to identify children that show stronger or weaker effects of an intervention \cite{ChunyAnso21}, or stronger or weaker gains in academic skills over time \cite{FokkyZeil24}. The framework of MOB is very flexible and it can be applied to a wide range of statistical models, such as linear and generalized linear regression \citep{KopAugStr:2013,ZeilyHoth08} or models for paired-comparison data \citep{StrWicZei:2011:JoEaBS,WiedyFrick21}. In this article, we will highlight two specific MOB methods that we consider particularly relevant for research in school psychology: MOB for mixed-effects models \citep{FokkySmit18} and MOB for Rasch measurement and Item Response Theory models \citep[IRT,][]{StrKopZei:2015:P,KomStrZei:2017:EaPM,HenDebStr:2023:EPM}. 
+MOB also identifies groups of persons defined by (combinations of) covariate values, but the groups can differ in a wider range of parameters of a statistical model, instead of only the mean. For example, MOB can be used to identify children that show stronger or weaker effects of an intervention \citep{ChunyAnso21}, or stronger or weaker gains in academic skills over time \citep{FokkyZeil24}. The framework of MOB is very flexible and it can be applied to a wide range of statistical models, such as %simplfied wording 
+linear and logistic regression \citep{KopAugStr:2013,ZeilyHoth08} or models for paired-comparison data \citep{StrWicZei:2011:JoEaBS,WiedyFrick21}. In this article, we will highlight two specific MOB methods that may be particularly relevant for research in school psychology: MOB for mixed-effects models \citep{FokkySmit18} and MOB for Rasch measurement and Item Response Theory models \citep[IRT,][]{StrKopZei:2015:P,KomStrZei:2017:EaPM,HenDebStr:2023:EPM}. 
 
-Mixed-effects models become relevant whenever data are collected in repeated measures or nested data structures. For example, when children are tested at several time points, the time points are nested in children; when children from different classes from different schools participate in a study, children are nested in classes, which are in turn nested in schools. In the section \hyperref[sec:glmmtree]{MOB for Subgroup Detection in Mixed-Effects Models}, we present \hyperref[sec:TutorialMixed]{Application Example 1} to illustrate how MOB can be used to detect subgroup-specific intervention effects while taking into account the nested data structure. In this example, the focus is on detecting subgroups with different parameters of a \textit{regression} model. We thus assume that the psychological test score(s) of interest have already been validated. 
+Mixed-effects models become relevant whenever data are collected in repeated measures or nested data structures. For example, when children are tested at several time points, the time points are nested in children; when children from different classes from different schools participate in a study, children are nested in classes, which are in turn nested in schools. In the section \hyperref[sec:glmmtree]{MOB for Subgroup Detection in Mixed-Effects Models}, we present \hyperref[sec:TutorialMixed]{Application Example 1} to illustrate how MOB can be used to detect subgroup-specific intervention effects, while taking into account the nested data structure. In this example, the focus is on detecting subgroups with different parameters of a \textit{regression} model. We thus assume that the psychological test score(s) of interest have already been validated. 
 
 In the section~\hyperref[sec:raschtree]{MOB for Detecting DIF in Measurement Models}, we go back in the research process to the point where a new psychological test has been administered to a validation sample. Here, we focus on detecting subgroups with different parameters of a \textit{measurement} model. Validity assessment requires that we make sure that test results are comparable, for example between children of different genders. If certain items show different measurement parameters between groups, this may put certain groups at a relative disadvantage, and these items are said to violate measurement invariance or to exhibit differential item functioning (DIF). In order to test for DIF in the framework of Item Response Theory or Rasch modelling \citep{AnthyDiPe16,DebStrZei:2022:CRC,Mall97}, the item parameters are compared between groups of persons. This can be done in a way that allows to detect DIF, while accounting for possible true group differences in ability. Traditional approaches for testing DIF require the groups to be pre-specified in order to test for DIF. In \hyperref[sec:TutorialRasch]{Application Example 2} we show how MOB flexibly allows to detect groups with different item parameters in a data-driven way. 
 
@@ -102,7 +104,8 @@ toy_data$x2 <- factor(ifelse(x2 > 5, yes = ifelse(x2 > 6.5, "A", "C"), no = "B")
 @
 
 
-We illustrate the idea using a simple, simulated toy dataset, comprising \Sexpr{nrow(toy_data)} observations and four variables: A continuous response variable $y$ (e.g., a total score for behavioral difficulties), and three covariates, $x_1$ (e.g., age), $x_2$ (e.g., reading comprehension score) and $x_3$ (e.g., gender, with levels male, female and non-binary), as possible partitioning variables. To keep the example simple, we apply MOB to a very basic global model, which comprises only an intercept. It would also be possible to use, e.g., a linear regression model or a logistic regression model as the global model. Figure~\ref{fig:toy}, left, shows the distribution of $y$ in a boxplot. Obviously, a global intercept or mean would not describe all observations equally well, there is quite some unexplained variation around the sample mean of \Sexpr{round(mean(toy_data$y), digits = 2)}.
+We illustrate the idea using a simple, simulated toy dataset, comprising \Sexpr{nrow(toy_data)} observations and four variables: A continuous response variable $y$ (e.g., a total score for behavioral difficulties), and three covariates, $x_1$ (e.g., age), $x_2$ (e.g., a reading comprehension score) and $x_3$ (e.g., gender, with levels male, female and non-binary), as possible partitioning variables. To keep the example simple, we apply MOB to a very basic global model, which comprises % simplified wording
+only an intercept (or mean). It would also be possible to use, e.g., a linear regression model or a logistic regression model as the global model. Figure~\ref{fig:toy}, left, shows the distribution of $y$ in a boxplot. Obviously, a global intercept or mean would not describe all observations equally well, there is quite some unexplained variation around the sample mean of \Sexpr{round(mean(toy_data$y), digits = 2)}.
 
 
 \begin{figure}[h]
@@ -137,12 +140,12 @@ To detect possible subgroups with different values for the parameters, MOB cycle
 \item The model parameters are first estimated jointly for all persons in the current node, starting with the root node containing the full sample.
 \item Structural change in the model parameters is assessed with respect to each available covariate.
 \item If there is significant structural change, the observations in the current node are split using the covariate associated with the strongest change.
-\item Steps 1--3 are repeated recursively in each resulting node until there is no more significant structural change (or the groups becomes too small).
+\item Steps 1--3 are repeated recursively in each resulting node until there is no more significant structural change (or the groups become too small).
 \end{enumerate}
 
-We applied MOB to the observations in the left panel of Figure~\ref{fig:toy}, specifying $x_1$, $x_2$ and $x_3$ as potential partitioning variables. The resulting tree is shown in the right panel of Figure~\ref{fig:toy}. In the root node, which contains all observations (step 1), structural change tests were performed for each of the three covariates (step 2). The tests revealed that $x_1$, a continuous covariate, was most strongly associated with instabilities in the intercept and $x_1$ was thus selected first for splitting (step 3). The $p$ value resulting from the structural change test for the first split in $x_1$ is depicted in the root node. By default, a Bonferroni correction is applied to the $p$ values, to account for the fact that the tests are performed for all of the potential partitioning variables. Next, the cutpoint for $x_1$ was selected so that the two resulting subgroups exhibit the strongest parameter differences, while the observations within the subgroup are as similar as possible. In the right daughter node, additional significant instability was detected with respect to $x_2$, a categorical covariate. Again, the cutpoint in $x_2$ was selected so that the two resulting subgroups exhibit strongest parameter differences. In the left daughter node (node 2), no further splits were created, because none of the three covariates were significantly associated with any further instability in this subgroup (step 4). The same held for nodes 4 and 5, so that the third covariate, $x_3$, was never selected for splitting. 
+We applied MOB to the observations in the left panel of Figure~\ref{fig:toy}, specifying $x_1$, $x_2$ and $x_3$ as potential partitioning variables. The resulting tree is shown in the right panel of Figure~\ref{fig:toy}. In the root node, which contains all observations (step 1), structural change tests were performed for each of the three covariates (step 2). The tests revealed that $x_1$, a continuous covariate, was most strongly associated with instabilities in the intercept and $x_1$ was thus selected first for splitting (step 3). The $p$ value resulting from the structural change test for the first split in $x_1$ is depicted in the root node. By default, a Bonferroni correction is applied to the $p$ values, to account for the fact that the tests are performed for all of the potential partitioning variables. Next, the cutpoint for $x_1$ was selected so that the two resulting subgroups exhibit the strongest parameter differences, while the observations within the subgroup are as similar as possible. In the right daughter node, additional significant instability was detected with respect to $x_2$, a categorical covariate. Again, the cutpoint in $x_2$ was selected so that the two resulting subgroups exhibit strongest parameter differences. In the left daughter node (node 2), no further splits were created, because none of the three covariates were significantly associated with any further instability in this subgroup (step 4). The same held for nodes 4 and 5, so that the third covariate $x_3$ was never selected for splitting. 
 
-The subgroup-specific distributions of the response variable are presented in the terminal nodes at the bottom of the tree. The fact that the tree in Figure~\ref{fig:toy} displays more than one terminal node confirms that one global model for all observations does not appropriately capture the pattern in the data.  The tree also shows shows that, out of the three covariates that were presented to the algorithm, only two were actually selected for splitting. This automatic variable selection is an important characteristic of the CART and MOB algorithms. The means (intercepts) in the terminal nodes are \Sexpr{term_node_means[1]}, \Sexpr{term_node_means[2]} and \Sexpr{term_node_means[3]}, respectively. While the means and distributions in nodes 2 and 4 appear very similar, the mean in node 5 is obviously higher. Substantively, the tree suggests and interaction effect: The effect of $x_2$ depends on the level of $x_1$ (vice versa). If $x_1$ were age and $x_2$ gender, this would indicate that gender differences only start to occur at somewhat later age.   
+The subgroup-specific distributions of the response variable are presented in the terminal nodes at the bottom of the tree. The fact that the tree in Figure~\ref{fig:toy} displays more than one terminal node confirms that one global model for all observations does not appropriately capture the pattern in the data.  The tree also shows shows that, out of the three covariates that were presented to the algorithm, only two were actually selected for splitting. This automatic variable selection is an important characteristic of the CART and MOB algorithms. The means (intercepts) in the terminal nodes are \Sexpr{term_node_means[1]}, \Sexpr{term_node_means[2]} and \Sexpr{term_node_means[3]}, respectively. While the means and distributions in nodes 2 and 4 appear very similar, the mean in node 5 is obviously higher. Substantively, the tree suggests and interaction effect: The effect of $x_2$ depends on the level of $x_1$ (vice versa). If $x_1$ were age and $x_2$ gender, this would indicate that gender differences only start to occur at a later age.   
 
 
 %The subgroups are defined by the covariates that are used for splitting and together with cutpoints in those covariates. For example, in Figure~\ref{fig:lmm_tree} for the metric covariates \texttt{AFTQ} and \texttt{Income} a numeric cutpoint has been selected by the MOB algorithm to separate the groups. The algorithm has identified this cutpoint as being the location of the strongest parameter difference between the two resulting groups. The categorical covariate \texttt{Race}, which was coded in three categories in this example, has been divided into two groups of categories: Black and Hispanic vs.~White. For a binary covariate, \todo{like ... -- add name if is there one in the other example?} 
@@ -166,13 +169,13 @@ Next, we discuss two specific methods that make use of the general MOB framework
 
 
 \section{MOB for Subgroup Detection in Mixed-Effects Models}
-\label(glmmtree)
+\label{glmmtree}
 
-Mixed-effects models contain two types of effects: Fixed and random effects. Fixed effects are typically used to capture population-averaged effects, while random effects are used to capture inter-individual variation deviating from these fixed effects. In many studies, researchers are specifically interested in testing hypotheses relating to the population-averaged effects, while the random effects are included in the model to properly account for inter-individual variation, and correlations between observations within the same unit \citep{RaudyBush02}.
+Mixed-effects models contain two types of effects: Fixed and random effects. Fixed effects are typically used to capture population-averaged effects, while random effects are used to capture inter-individual variation around these fixed effects. In many studies, researchers are specifically interested in testing hypotheses relating to the population-averaged effects, while the random effects are included in the model to properly account for inter-individual variation, and correlations between observations within the same unit \citep{RaudyBush02}.
 
 GLMM trees combine MOB and generalized linear mixed-effects models (GLMMs) and were introduced by \cite{FokkySmit18}. While the 'standard' MOB trees \citep{ZeilyHoth08} allow for subgroup detection in fixed-effects GLMs, GLMM trees additionally estimate and account for random effects and can thus be used for partitioning mixed-effects regression models. Because researchers' interests in multilevel models commonly focus on the fixed effects (of time or treatment, for example), the GLMM tree algorithm only targets structural change in the fixed-effects parameters. The random-effects parameters can be specified as usual and are assumed constant; that is, they are estimated using all observations in the dataset. Structural change is thus assessed with respect to the fixed-effects parameters, while dependency between observations within the same units is accounted for by the random effects. The resulting subgroups will differ in their estimates for the fixed-effects coefficients only. As such, GLMM trees allow for detecting subgroups in multilevel models that differ with respect to any (set of) fixed-effects parameters of interest. For example, users may be interested in detecting subgroups with different means \citep{FokkyEdbr21}, but also differential effects of treatment \citep{FokkySmit18} or differential growth over time \citep{FokkyZeil24}, to name but a few examples. 
 
-The \texttt{R} functions for fitting GLMM trees are the \texttt{lmertree} and \texttt{glmertree} functions from package \texttt{glmertree}. The usage of this function will be illustrated in \hyperref[sec:TutorialMixed]{Application Example 1}. Further mathematical and computational details about the GLMM tree model are also described in \cite{FokkySmit18} and \cite{FokkyZeil24}. 
+The \texttt{R} functions for fitting GLMM trees are the \texttt{lmertree} (for linear mixed models) and \texttt{glmertree} (for functions from package \texttt{glmertree}. The usage of this function will be illustrated in \hyperref[sec:TutorialMixed]{Application Example 1}. Further mathematical and computational details about the GLMM tree model are also described in \cite{FokkySmit18} and \cite{FokkyZeil24}. 
 
 
 
@@ -241,7 +244,7 @@ save(HS_dat, file = "HS_dat.Rda")
 
 To illustrate the use of GLMM trees, we analyze a dataset from \cite{Demi09}, who evaluated long-term benefits of participation in Head Start. Head Start is a federally funded nationwide pre-school program for children from low-income families in the United States. Participation in Head Start takes place from ages 3 through 5. \cite{Demi09} compared performance of siblings who differed in their participation in the program using data from the National Longitudinal Survey of Youth \citep{NLSY}. 
 
-The sample consists of \Sexpr{length(unique(data$MotherID))} families with at least two siblings, where at least one sibling participated in Head Start and at least one sibling did not participate in Head Start or any other preschool program. Data from children in those families who participated in another preschool program were excluded. The family structure allows siblings who did not participate in Head Start to serve as a natural control to assess the effects of participating in Head Start. The outcome variable comprises repeated assessments on the Peabody Picture Vocabulary Test \citep[PPVT]{DunnyDunn81}, we will thus model PPVT trajectories over time. On average, there were \Sexpr{round(mean(table(HS_dat$ChildID)), digits = 2)} PPVT scores per child, for \Sexpr{round(100*(1-mean(table(HS_dat$ChildID) > 1)), digits = 0)}\% of the children there was only a single PPVT score available. 
+The sample consists of \Sexpr{length(unique(data$MotherID))} families with at least two siblings, where at least one sibling participated in Head Start and at least one sibling did not participate in Head Start or any other pre-school program. Data from children in those families who participated in another pre-school program were excluded. The family structure allows siblings who did not participate in Head Start to serve as a natural control to assess the effects of participating in Head Start. The outcome variable comprises repeated assessments on the Peabody Picture Vocabulary Test \citep[PPVT]{DunnyDunn81}, we will thus model PPVT trajectories over time. On average, there were \Sexpr{round(mean(table(HS_dat$ChildID)), digits = 2)} PPVT scores per child, for \Sexpr{round(100*(1-mean(table(HS_dat$ChildID) > 1)), digits = 0)}\% of the children there was only a single PPVT score available. 
 
 %Developmental trajectories rarely if ever show a linear pattern over time; they typically show strong increases early on, which level off over time. We therefore took the square root of the child's age in years, to obtain a pattern of approximately linear increases over time. Appendix A shows PPVT scores as a function of time, both before and after the transformation. 
 
@@ -304,7 +307,7 @@ With the second argument, we specified the dataset which contain the variables. 
  
 % Mirka: And if I remember correctly, one critical point was also that in longitudinal analysis, we want to avoid that a person is ``split up'' in several terminal nodes, and that the cluster argument also helps for that? If that's correct, this could also be a good place to add a sentence about this advantage? Marjolein: The splitting up is avoided by having partitioning variables that are constant over time (and also within families, in this instance). The level of the parameter stability tests do not really avoid that. 
 
-Finally, to aid interpretability we want to retain large enough subgroups, we specified the \texttt{minsize} argument. Splits will only be implemented if the resulting nodes contain at least 250 observations. With a total sample size of \Sexpr{round(nrow(HS_dat))}, even small differences in the effects of age and Head Start participation between subgroups may become significant. The average number of measurements per family was \Sexpr{round((nrow(HS_dat) / length(unique(HS_dat$ChildID))) * (length(unique(HS_dat$ChildID)) / length(unique(HS_dat$MotherID))), digits = 1L)}. A minimum node size of 250 ensured that the estimated effects of age and Head Start participation in the terminal nodes would at least be based on data from about 50 families.
+To aid interpretation, we would like to retain large enough subgroups. We therefore specified the \texttt{minsize} argument, so that splits will only be implemented if the resulting nodes contain at least 250 observations. With a total sample size of \Sexpr{round(nrow(HS_dat))}, even small differences in the effects of age and Head Start participation between subgroups may become significant. The average number of measurements per family was \Sexpr{round((nrow(HS_dat) / length(unique(HS_dat$ChildID))) * (length(unique(HS_dat$ChildID)) / length(unique(HS_dat$MotherID))), digits = 1L)}. A minimum node size of 250 ensured that the estimated effects of age and Head Start participation in the terminal nodes would at least be based on data from about 50 families.
 
 
 \subsubsection{Interpreting a GLMM tree}
@@ -368,7 +371,7 @@ for (node in sort(unique(nodes))) {
 
 The resulting tree is presented in Figure~\ref{fig:lmm_tree}. Below each terminal node, we plotted the observations and the two regression curves given by the coefficients in that node. The first split was made based on the AFTQ variable, which represents the mother's score on the Armed Forced Qualification Test, adjusted for the age at which they completed the test. The group with higher mother's AFTQ scores is further split based on race. The Black and Hispanic group is further split based on mother's AFTQ score. 
 
-To aid interpretation of the coefficients in Figure~\ref{fig:lmm_tree}, Table~\ref{tab:predictions} provides predicted PPVT scores for each of the groups and programs at ages 6 and 12. All nodes show a modest benefit of Head Start participation at age 6, about 3-4 points on the PPVT. This benefit increases over time for the group with higher mother's AFTQ scores. The benefit decreases over time for children in the group with lowest mother's AFTQ scores (node 2). For Black and Hispanic children with intermediate mother's AFTQ scores, the benefit at age 6 even shifts to a disadvantage of Head Start participation at age 12. These results roughly correspond to the findings of \cite{Demi09}, who report a relative benefit of Head Start participation of about 0.15 standard deviations at age 5-6, which fades out over time to about 0.05 at ages 11-14. Fade out was reported to be particularly strong for Afriacn-American and very disadvantaged children. The global benefit of participation in Head Start as shown in Figure~\ref{fig:global_lmm} and reported by \cite{Demi09} thus seems to differ across groups.
+To aid interpretation of the coefficients in Figure~\ref{fig:lmm_tree}, Table~\ref{tab:predictions} provides predicted PPVT scores for each of the groups and programs at ages 6 and 12. All nodes show a modest benefit of Head Start participation at age 6, about 3-4 points on the PPVT. This benefit increases over time for the group with higher mother's AFTQ scores. The benefit decreases over time for children in the group with lowest mother's AFTQ scores (node 2). For Black and Hispanic children with intermediate mother's AFTQ scores, the benefit at age 6 even shifts to a disadvantage of Head Start participation at age 12. These results roughly correspond to the findings of \cite{Demi09}, who report a relative benefit of Head Start participation of about 0.15 standard deviations at age 5-6, which fades out over time to about 0.05 at ages 11-14. Fade out was reported to be particularly strong for African-American and very disadvantaged children. The global benefit of participation in Head Start as shown in Figure~\ref{fig:global_lmm} and reported by \cite{Demi09} thus seems to differ across groups.
 
 It should be noted that MOB and GLMM trees are exploratory techniques: The subgroup structures are detected from the data. Such data-driven procedures cannot provide valid standard errors and significance tests to evaluate significance of the observed subgroup differences. To that end, the subgroup structure that was found should be used in a confirmatory analysis on a new sample, that was not used to fit the tree. This would allow to test the hypothesis, either using frequentist or Bayesian approaches, of whether the parameters of interest really differ between subgroups. Researchers who want to both detect subgroups and test hypotheses on the parameter differences on one dataset, are advised to split their dataset into two parts before the analyses. Then one part of the dataset can be used for exploration, and the other part can be used to test the parameter differences between subgroups. 
 
@@ -422,7 +425,7 @@ knitr::kable(res_df, format = "latex", digits = 3,
 \section{MOB for Detecting DIF in Measurement Models}
 \label{raschtree}
 
-Validity assessment of scores on psychological or educational tests requires researchers to assess whether the same construct is measured in the same way for different groups. In the framework of IRT and Rasch measurement, test items are typically investigated with respect to item misfit, multidimensionality and other violations of the measurement model \citep[cf., for example][for an introduction]{DebStrZei:2022:CRC}. A particularly crucial assumption for the comparability of test scores between groups is measurement invariance. Items that violate measurement invariance by showing different measurement properties for different groups of participants display DIF.
+Validity assessment of scores on psychological or educational tests requires researchers to assess whether the same construct is measured in the same way for different groups. In the framework of IRT and Rasch measurement, test items are typically investigated with respect to item misfit, multidimensionality and other violations of the measurement model \citep[cf., for example][for an introduction]{DebStrZei:2022:CRC}. A particularly crucial assumption for the comparability of test scores between groups is measurement invariance. Items that violate measurement invariance by showing different measurement properties for different groups of participants exhibit differential item functioning (DIF).
 
 MOB can be used to detect DIF by means of testing whether the item parameters of the measurement model exhibit significant instability with respect to (combinations of) covariates. For the Rasch measurement model, the \texttt{R} function for conducting the MOB analysis is the \texttt{raschtree} function from package \texttt{psychotree} \citep{StroyKopf15}. The usage of this function will be illustrated in \hyperref[sec:TutorialRasch]{Application Example 2}. We will see that, just like for GLMM trees, we need to specify which variables are part of the parametric model. In the case of the Rasch model, this will be the test items. Moreover, we need to specify which covariates are made available to the MOB algorithm for selecting relevant splitting variables and cutpoints. 
 
@@ -434,7 +437,7 @@ Together with a purification step \citep[see][%and Application Example 2 for det
 %\todo[inline]{following text from Caro can be used here or later after example 2 or in discussion}
 For example, items that show DIF between different language groups may often be improved by means of making sure that in all translations the meaning is as similar as possible, and/or that the words employed in the translations for the different languages are equally frequently used. In other situations, sources of DIF might be harder to eliminate, so that often DIF items may be excluded from a test. Either way, the measurement model needs to be refitted and its assumptions checked again after the final set of items has been decided upon and, in the case of modified items, administered again. 
 
-Another important aspect to keep in mind is that DIF can be caused by one or more items measuring a secondary dimension in addition to the dimension that is intended to be measured by the test. This would be the case in instruments intended to measure math aptitude containing pure algebra problems as well as story problems. Students whose native language is not the same as the test language can have a disadvantage in answering the story problems, for example when they contain seldomly used words. These items may then show DIF between native and non-native speakers. When encountering this, the test developers will have to decide whether the items with story problems should be excluded from the test, whether they can be improved, for example by using more frequently used words, or whether the test should be considered two- rather than one-dimensional. For a discussion of the connection between DIF and multidimensionality, see also \cite{Ack:1992,Stretal:2021:APM}.
+Another important aspect to keep in mind is that DIF can be caused by one or more items measuring a secondary dimension in addition to the dimension that is intended to be measured by the test. This can be the case, for example, for an instrument intended to measure math aptitude, that contains both pure algebra problems as well as story problems. Students whose native language is not the same as the test language can have a disadvantage in answering the story problems, for example when these contain seldomly used words. These items may then show DIF between native and non-native speakers. When encountering this, the test developers will have to decide whether the items with story problems should be excluded from the test, whether they can be improved, for example by using more frequently used words, or whether the test should be considered two- rather than one-dimensional. For a discussion of the connection between DIF and multidimensionality, see also \cite{Ack:1992,Stretal:2021:APM}.
 
 %We will now illustrate how to use the \texttt{R} packages \texttt{glmertree} and \texttt{psychotree} to conduct the MOB analyses. 
 
@@ -448,7 +451,7 @@ Another important aspect to keep in mind is that DIF can be caused by one or mor
 \section{Discussion}
 \label{discussion}
 
-In this tutorial paper we have outlined the rationale of the MOB algorithm and how it can be used for detecting parameter differences in mixed-effects and Rasch models. The main advantage of MOB is that it can detect groups of persons with different model parameters in a data-driven manner. This makes it more flexible for detecting differences that were not hypothesized by the researcher. For example in DIF analysis, it is often the case that obvious sources of DIF have already been avoided by the content experts during item creation. Any remaining DIF is unexpected. Therefore, any DIF detection approach that relies on the researchers correctly specifying the exact groups of persons that exhibit DIF can miss DIF if it is associated with other (combinations of) covariates or other cutpoints than the ones investigated. In this sense, the more exploratory approach of Rasch trees has higher statistical power to detect DIF in previously unknown groups \citep{StrKopZei:2015:P}. The same argument holds for parameter differences in mixed-effects models, where the substantial hypotheses formulated a priori are typically about global intervention effects, not about possible subgroup-specific differences. GLMM trees allow for exploring whether fixed effects differ as a function of the partitioning variable; that is, identifying possible interactions the predictor of interest may be involved in.
+In this tutorial paper we have outlined the rationale of the MOB algorithm and how it can be used for detecting parameter differences in mixed-effects and Rasch models. The main advantage of MOB is that it can detect groups of persons with different model parameters in a data-driven manner. This makes it more flexible for detecting differences that were not hypothesized by the researcher. For example in DIF analysis, it is often the case that obvious sources of DIF have already been avoided by the content experts during item creation. Any remaining DIF is unexpected. Therefore, any DIF detection approach that relies on the researchers correctly specifying the exact groups of persons that exhibit DIF can miss DIF if it is associated with other (combinations of) covariates or other cutpoints than the ones investigated. In this sense, the more exploratory approach of Rasch trees has higher statistical power to detect DIF in previously unknown groups \citep{StrKopZei:2015:P}. The same argument holds for parameter differences in mixed-effects models, where the substantial hypotheses formulated a priori are typically about global intervention effects, not about possible subgroup-specific differences. GLMM trees allow for exploring whether fixed effects differ as a function of the partitioning variables; that is, identifying possible interactions the predictor of interest may be involved in.
 
 However, researchers should be aware that a covariate-based approach like MOB will only be able to detect parameter differences if the relevant covariates were recorded in the study and supplied to the algorithm. If no (or few) potentially relevant covariates are available, an alternative framework for detecting previously unknown groups of persons with different model parameters is mixture modelling \citep[see, e.g.,][in the context of Rasch modelling]{AyalySant17,FriStrZei:2015:EaPM}. Mixture modelling aims at identifying latent classes of persons with different properties. It can also be combined with observed covariates. A comparison of MOB and mixture modelling is given by \citet{FriStrZei:2014}.
 
